# demos-ros-mcp-server

./: LICENSE  README.md
1_Gazebo_Tugbot/: README.md
2_UnitreeGo2_simulation/: README.md
2_UnitreeGo2_simulation/install/: local_setup.sh  setup.sh
2_UnitreeGo2_simulation/install/champ/share/champ/: local_setup.sh  package.sh
2_UnitreeGo2_simulation/install/champ_base/share/champ_base/: local_setup.sh  package.sh
2_UnitreeGo2_simulation/install/champ_bringup/share/champ_bringup/: local_setup.sh  package.sh
2_UnitreeGo2_simulation/install/champ_config/share/champ_config/: local_setup.sh  package.sh
2_UnitreeGo2_simulation/install/champ_config/share/champ_config/launch/: gazebo.launch.py
2_UnitreeGo2_simulation/install/champ_description/share/champ_description/: local_setup.sh  package.sh
2_UnitreeGo2_simulation/install/champ_gazebo/share/champ_gazebo/: local_setup.sh  package.sh
2_UnitreeGo2_simulation/install/champ_gazebo/share/champ_gazebo/cmake/: ament_cmake_export_dependencies-extras.cmake
2_UnitreeGo2_simulation/install/champ_gazebo/share/champ_gazebo/config/: ros_control.yaml
2_UnitreeGo2_simulation/install/champ_msgs/share/champ_msgs/: local_setup.sh  package.sh
2_UnitreeGo2_simulation/install/champ_navigation/share/champ_navigation/: local_setup.sh  package.sh
2_UnitreeGo2_simulation/install/champ_teleop/share/champ_teleop/: local_setup.sh  package.sh
2_UnitreeGo2_simulation/install/go2_config/share/go2_config/: local_setup.sh  package.sh  package.xml
2_UnitreeGo2_simulation/install/go2_config/share/go2_config/launch/: gazebo.launch.py
2_UnitreeGo2_simulation/install/go2_description/share/go2_description/: local_setup.sh  package.sh  package.xml
2_UnitreeGo2_simulation/install/go2_description/share/go2_description/xacro/: gazebo.xacro  leg.xacro  velodyne.xacro
2_UnitreeGo2_simulation/install/velodyne_description/share/velodyne_description/: local_setup.sh  package.sh  package.xml
2_UnitreeGo2_simulation/install/velodyne_description/share/velodyne_description/cmake/: velodyne_descriptionConfig.cmake
2_UnitreeGo2_simulation/install/velodyne_description/share/velodyne_description/config/: bridge.yaml
2_UnitreeGo2_simulation/install/velodyne_description/share/velodyne_description/launch/: example.launch.py
2_UnitreeGo2_simulation/install/velodyne_description/share/velodyne_description/rviz/: example_ros2.rviz
2_UnitreeGo2_simulation/install/velodyne_description/share/velodyne_description/urdf/: HDL-32E.urdf.xacro  LiDAR-X.urdf.xacro  VLP-16.urdf.xacro  example.urdf.xacro
2_UnitreeGo2_simulation/install/velodyne_description/share/velodyne_description/world/: example.sdf
2_UnitreeGo2_simulation/install/velodyne_gazebo_plugins/share/velodyne_gazebo_plugins/: local_setup.sh  package.sh
2_UnitreeGo2_simulation/install/velodyne_gazebo_plugins/share/velodyne_gazebo_plugins/cmake/: ament_cmake_export_dependencies-extras.cmake  (+2 more)
2_UnitreeGo2_simulation/install/velodyne_simulator/share/velodyne_simulator/: local_setup.sh  package.sh  package.xml
2_UnitreeGo2_simulation/install/velodyne_simulator/share/velodyne_simulator/cmake/: velodyne_simulatorConfig.cmake
2_UnitreeGo2_simulation/log/: latest_build
2_UnitreeGo2_simulation/src/unitree-go2-ros2/: .gitmodules  MIGRATION_GAZEBO_TO_IGNITION.md  README.md
2_UnitreeGo2_simulation/src/unitree-go2-ros2/champ/champ_gazebo/: CMakeLists.txt  package.xml
2_UnitreeGo2_simulation/src/unitree-go2-ros2/champ/champ_gazebo/launch/: gazebo.launch.py
2_UnitreeGo2_simulation/src/unitree-go2-ros2/champ/champ_gazebo/worlds/: default.sdf
2_UnitreeGo2_simulation/src/unitree-go2-ros2/champ_teleop/: champ_teleop.py
2_UnitreeGo2_simulation/src/unitree-go2-ros2/velodyne/: MIGRATION_GUIDE.md  README.md
2_UnitreeGo2_simulation/src/unitree-go2-ros2/velodyne/velodyne_description/: CMakeLists.txt
2_UnitreeGo2_simulation/src/unitree-go2-ros2/velodyne/velodyne_gazebo_plugins/: CMakeLists.txt  package.xml
2_UnitreeGo2_simulation/src/unitree-go2-ros2/velodyne/velodyne_gazebo_plugins/config/: velodyne_controller_ros2.yaml
2_UnitreeGo2_simulation/src/unitree-go2-ros2/velodyne/velodyne_gazebo_plugins/include/velodyne_gazebo_plugins/: VelodyneLidarSystem.hpp
2_UnitreeGo2_simulation/src/unitree-go2-ros2/velodyne/velodyne_gazebo_plugins/src/: VelodyneLidarSystem.cpp
3_turtlebot_gazebo/: README.md
3_turtlebot_gazebo/install/: local_setup.sh
3_turtlebot_gazebo/install/turtlebot3_fake_node/include/turtlebot3_fake_node/: turtlebot3_fake_node.hpp
3_turtlebot_gazebo/install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
3_turtlebot_gazebo/install/turtlebot3_gazebo/include/turtlebot3_gazebo/: obstacle1.hpp  obstacle2.hpp  obstacles.hpp  traffic_bar_plugin.hpp  traffic_light_plugin.hpp  turtlebot3_drive.hpp
3_turtlebot_gazebo/install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
3_turtlebot_gazebo/install/turtlebot3_manipulation_gazebo/share/turtlebot3_manipulation_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.xml
3_turtlebot_gazebo/install/turtlebot3_simulations/share/turtlebot3_simulations/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
3_turtlebot_gazebo/log/: latest_build
4_turtlebot_ignition/: README.md
4_turtlebot_ignition/install/: setup.sh
4_turtlebot_ignition/install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.sh
4_turtlebot_ignition/install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.sh
4_turtlebot_ignition/install/turtlebot3_manipulation_gazebo/share/turtlebot3_manipulation_gazebo/: local_setup.sh  package.sh
4_turtlebot_ignition/install/turtlebot3_simulations/share/turtlebot3_simulations/: local_setup.sh
4_turtlebot_ignition/log/: latest_build
4_turtlebot_ignition/src/turtlebot3_simulations/turtlebot3_gazebo/: CMakeLists.txt  package.xml
(+247 files in other folders)
