<?xml version="1.0"?>
<package format="3">
  <name>go2_config</name>
  <version>0.1.0</version>
  <description>Go2 Config Package for Ignition Fortress</description>

  <maintainer email="anujjain.dev@gmail.com">Anuj Jain</maintainer>
  <author>Anuj Jain</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>launch_ros</build_depend>
  
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
